--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,18 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="ja">
 <head>
-  <meta charset="utf-8">
-  <title>領収書アップロード</title>
+  <meta charset="UTF-8">
+  <title>Receipts Upload</title>
 </head>
 <body>
-  <h2>領収書アップロード</h2>
-
-  <form method="post" enctype="multipart/form-data">
-    <input type="file" name="image" accept="image/*" capture="environment" required><br><br>
-
-    支払日：
-    <input type="date" name="pay_date" required><br><br>
-
-    支払い先：
-    <input type="text" name="vendor" required><br><br>
-
-    金額：
-    <input type="number" name="amount" required><br><br>
-
-    内容：
-    <input type="text" name="description"><br><br>
-
-    <button type="submit">送信</button>
-  </form>
+<h1>領収書アップロード</h1>
+<form method="post" enctype="multipart/form-data">
+  支払日: <input type="date" name="date" required><br>
+  支払い先: <input type="text" name="vendor" required><br>
+  金額: <input type="number" name="amount" required><br>
+  内容: <input type="text" name="description" required><br>
+  ファイル: <input type="file" name="file" accept="image/*" capture="environment" required><br>
+  <input type="submit" value="アップロード">
+</form>
 </body>
 </html>
