--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Upload Test</title>
+<meta charset="utf-8">
+<title>領収書アップロード</title>
 </head>
 <body>
-  <h2>画像アップロードテスト</h2>
-
-  <form method="POST" enctype="multipart/form-data">
-    <input
-      type="file"
-      name="image"
-      accept="image/*"
-      required
-    >
-    <br><br>
-    <button type="submit">送信</button>
-  </form>
-
+<h2>領収書アップロード</h2>
+<form method="POST" enctype="multipart/form-data">
+  支払日: <input type="date" name="pay_date" value=""><br><br>
+  支払い先: <input type="text" name="payee" value=""><br><br>
+  金額: <input type="text" name="amount" value=""><br><br>
+  画像: <input type="file" name="image" accept="image/*" capture="environment"><br><br>
+  <input type="submit" value="アップロード">
+</form>
 </body>
 </html>
+
